--- a/app/src/main/res/layout/tabitem.xml
+++ b/app/src/main/res/layout/tabitem.xml
@@ -21,10 +21,23 @@
 
                 />
         </LinearLayout-->
-        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <ImageView
+            android:layout_height="30dp"
+            android:layout_width="30dp"
+            android:scaleType="centerCrop"
+            android:background="@drawable/ic_launcher"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="left"
+            />
+			<!-- 
+			android:background="@drawable/rounded_corner"
+			-->
+        <TableLayout 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingTop="0dip" android:layout_gravity="top"
+			android:background="@drawable/rounded_corner"
             >
             <TableRow>
                 <TextView
@@ -35,7 +48,7 @@
                     android:textSize="16sp"
                     android:layout_marginLeft="10dip"
                     android:layout_marginTop="4dip"
-                    android:textColor="#000000"
+                    android:textColor="@color/button_text"
                     android:layout_span="1"
                     />
             </TableRow>
@@ -54,15 +67,5 @@
                     android:gravity="left"/>
             </TableRow>
         </TableLayout>
-
-        <!--ImageView
-            android:layout_height="30dp"
-            android:layout_width="30dp"
-            android:scaleType="centerCrop"
-            android:background="@drawable/dislike1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="left"
-            /-->
     </TableRow>
 </TableLayout>
