--- a/app/src/main/res/layout/tabitem.xml
+++ b/app/src/main/res/layout/tabitem.xml
@@ -29,6 +29,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:gravity="left"
+            android:onClick="downloadFile"
             />
 			<!-- 
 			android:background="@drawable/rounded_corner"
