--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" > 
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"> //Defines the shape of button you wants
+    <solid android:color="#B0D43D"/>  <!-- eeffff -->
+    <corners android:radius="8dp" />
+</shape>
+<!--shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke android:width="1dp" android:color="#FFFFFF" /> 
     <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp" /> 
     <corners android:radius="8dp" /> 
-</shape>
+    <corners android:bottomLeftRadius="8dp"
+             android:bottomRightRadius="8dp"
+             android:topLeftRadius="8dp"
+             android:topRightRadius="8dp"/>
+</shape-->
