--- a/app/src/main/res/layout/inbox_list.xml
+++ b/app/src/main/res/layout/inbox_list.xml
@@ -11,6 +11,10 @@
         android:layout_height="wrap_content" /-->
     <!--    android:id="@android:id/list"  -->
  
+    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/autocomplete_country"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
      <com.fortysevendeg.swipelistview.SwipeListView
         android:id="@+id/example_swipe_lv_list"
         android:listSelector="#00000000"
