--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,7 @@
     <style name="MyListTitle">
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textSize">17sp</item>
-        <item name="android:textStyle">bold</item>
+<!--         <item name="android:textStyle">bold</item> -->
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
     </style>
